[workspace]
members = [ "crates/*" ]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bytelink_crypto = { path = "crates/bytelink_crypto" }

anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
insta = { version = "1.43.2", features = ["json"] }
rand = { version = "0.9.2" }
