[package]
name = "bytelink_crypto"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }

alloy-primitives = { version = "1.4.1", features = ["k256"] }
alloy-signer = "1.0.42"
alloy-signer-local = "1.0.42"
itoa = "1.0.15"
