[package]
name = "bytelink_node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
bytelink_crypto = { workspace = true }

dashmap = "6.1.0"
jiff = { version = "0.2.15", features = ["serde"] }
serde_json = "1.0.145"

[dev-dependencies]
insta = { workspace = true }
rand = { workspace = true }
