[package]
name = "bytelink_wallet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytelink_crypto = { workspace = true }
anyhow = { workspace = true }

clap = { version = "4.5.51", features = ["derive"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdsa", "ecdsa-core"] }

[[bin]]
name = "wallet"
path = "src/main.rs"
